--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="./Stylesheets/Window.css">
     <link rel="stylesheet" href="./Stylesheets/Card.css">
     <link rel="stylesheet" href="./Stylesheets/Highlight.css">
+    <link rel="stylesheet" type="text/css" href="./Stylesheets/Landscape.css" media="screen and (orientation: landscape)">
+    <link rel="stylesheet" type="text/css" href="./Stylesheets/Portrait.css" media="screen and (orientation: portrait)">
 
   </head>
   <body>
