--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
   </div>
   <div class="Containers">
     <div id="Bio">
-      Drawing whenever wherever forever ever ever!!!  
+     Drawing whenever wherever<br>forever ever ever!!!
     </div>
   </div>
   <div class="Containers"></div>
   <div class="Containers">
-    <a class="Links" href="https://www.instagram.com/drawingmycompass/">Instagram</a>
+    <a id="Link_1" class="Links" href="https://www.instagram.com/drawingmycompass/">Instagram</a>
   </div>
   <div class="Containers">
-    <a class="Links" href="https://www.deviantart.com/drawingmycompass/gallery">DeviantArt</a>
+    <a id="Link_2" class="Links" href="https://www.deviantart.com/drawingmycompass">DeviantArt</a>
   </div>
   <div class="Containers">
-    <a class="Links" href="https://open.spotify.com/playlist/1sHTvHLJuF3mtRILaiSmki?si=6abbb4a832f34eb2">Community Spotify Playlist</a>
+    <a id="Link_3" class="Links" href="https://open.spotify.com/playlist/1sHTvHLJuF3mtRILaiSmki?si=6abbb4a832f34eb2">Community Spotify Playlist</a>
   </div>
 </div>
     
