--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     
-    <div id="Background"></div>
+    <!-- <div id="Background"></div> -->
     <div id="Background_2">    
     </div>
 
