Adjusted animation timing.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Drawing My Compass ♡</title>
+    <script type="text/javascript" src="./JavaScript/Main.js"></script>
     <link rel="stylesheet" href="./Stylesheets/Window.css">
     <link rel="stylesheet" href="./Stylesheets/Card.css">
     <link rel="stylesheet" href="./Stylesheets/Highlight.css">
