--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <a id="Link_3" class="Links" href="https://open.spotify.com/playlist/1sHTvHLJuF3mtRILaiSmki?si=6abbb4a832f34eb2">Community Spotify Playlist</a>
   </div>
 
-<button class="Share_Button" type="button" name="button">
+<button id="Share_Button" type="button" name="button">
 
 </button>
   <!-- <div class="Containers">
@@ -65,7 +65,7 @@
 </div>
 
 <script type="text/javascript">
-let Share_Button = document.getElementsByClassName('Share_Button')[0];
+let Share_Button = document.getElementById('Share_Button');
 Share_Button.addEventListener('click', event => {
   Share_Button.classList.remove('Button_Pressed');
   void Share_Button.offsetWidth;
