--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no"/>
     <title>Drawing My Compass ♡</title>
     <script type="text/javascript" src="./JavaScript/Main.js"></script>
     <link rel="stylesheet" href="./Stylesheets/Window.css">
