--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
   </div>
   <div class="Containers"></div>
   <div class="Containers">
-    <a id="Link_1" class="Links" href="https://www.instagram.com/drawingmycompass/">Instagram</a>
+    <button id="Link_1" class="Links">Instagram</button>
   </div>
   <div class="Containers">
-    <a id="Link_2" class="Links" href="https://www.deviantart.com/drawingmycompass">DeviantArt</a>
+    <button id="Link_2" class="Links">DeviantArt</button>
   </div>
   <div class="Containers">
-    <a id="Link_3" class="Links" href="https://open.spotify.com/playlist/1sHTvHLJuF3mtRILaiSmki?si=6abbb4a832f34eb2">Community Spotify Playlist</a>
+    <button id="Link_3" class="Links">Community Spotify Playlist</button>
   </div>
 
 <button id="Share_Button" type="button" name="button">
