--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no"/>
+    <meta name="viewport" 
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <!-- <meta name="viewport" content="width=device-width, user-scalable=no"/> -->
     <title>Drawing My Compass ♡</title>
     <script type="text/javascript" src="./JavaScript/Main.js"></script>
     <link rel="stylesheet" href="./Stylesheets/Window.css">
