--- a/Pages/Code.html
+++ b/Pages/Code.html
@@ -33,9 +33,9 @@
     <!-- Education -->
     <div id="Academic_Projects_Icon" class="App_Icons"></div>
     <!-- Experience -->
-    <div id="Experience_Icon" class="App_Icons"></div>
-    <!-- Skills -->
     <div id="Skills_Icon" class="App_Icons"></div>
+    <!-- Skills -->
+    <div id="Education_Icon" class="App_Icons"></div>
     <!-- Courses -->
     <div id="Courses_Icon" class="App_Icons"></div>
     <!-- Certifications -->
