Mobile Responsiveness Update

--- a/Pages/Code.html
+++ b/Pages/Code.html
@@ -63,6 +63,7 @@
 
         
       </div>
+      <div class="About_Details"></div>
       <div id="About_Card_Title"><b>OS</b>&nbsp;Portfolio</div>
       <div class="About_Details"><b>Version 1.0</b></div>
       <div class="About_Details"></div>
@@ -74,6 +75,7 @@
 
       <div class="Detail_Buttons">System Report...</div>
       <div class="Detail_Buttons">Software Update...</div>
+      <div class="About_Details"></div>
 
 
     </div>
