Updated Control Center

--- a/Pages/Code.html
+++ b/Pages/Code.html
@@ -147,7 +147,18 @@
     
     <div class="Control_Center_Card Cards">
       <div id="Main_Toggles_Container" class="Control_Centre_Divisions">
-        
+        <div class="Circle_Control_Center_Toggles">•</div>
+          <div class="Main_Toggle_Heading">Wi-Fi
+            <span class="Main_Toggle_Subheadings"><br>WIFI</span>
+          </div>
+        <div class="Circle_Control_Center_Toggles">•</div>
+          <div class="Main_Toggle_Heading">Bluetooth
+            <span class="Main_Toggle_Subheadings"><br>On</span>
+          </div>
+        <div class="Circle_Control_Center_Toggles">•</div>        
+          <div class="Main_Toggle_Heading">FileDrop
+            <span class="Main_Toggle_Subheadings"><br>Contacts Only</span>
+          </div>
       </div>
       <div id="Do_Not_Disturb_Container" class="Control_Centre_Divisions"></div>
       <div id="Keyboard_Brightness_Container" class="Control_Centre_Divisions"></div>
