--- a/Pages/Code.html
+++ b/Pages/Code.html
@@ -179,7 +179,7 @@
             </svg>
         </div>
           <div class="Main_Toggle_Heading">
-            <div class="Main_Toggle_Subheadings">Wi-Fi<br><span>WIFI</span></div>
+            <div id="WIFI_Label" class="Main_Toggle_Subheadings">Wi-Fi<br><span>Starlink</span></div>
           </div>
         <div class="Circle_Control_Center_Toggles">  
             <svg id="Control_Center_Bluetooth_Icon" viewBox="0 0 9 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -187,7 +187,7 @@
             </svg>
         </div>
           <div class="Main_Toggle_Heading">
-            <div class="Main_Toggle_Subheadings">Bluetooth<br><span>On</span></div>
+            <div id="Bluetooth_Label" class="Main_Toggle_Subheadings">Bluetooth<br><span>On</span></div>
           </div>
         <div class="Circle_Control_Center_Toggles">
           <svg id="Control_Center_FileDrop_Icon" viewBox="0 0 47 44" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -195,7 +195,7 @@
           </svg>
         </div>        
           <div class="Main_Toggle_Heading">
-            <div class="Main_Toggle_Subheadings">FileDrop<br><span>Contacts Only</span></div>
+            <div id="FileDrop_Label" class="Main_Toggle_Subheadings">FileDrop<br><span>Contacts Only</span></div>
           </div>
           
           
