Brightness Slider Functionality

--- a/Pages/Code.html
+++ b/Pages/Code.html
@@ -208,12 +208,12 @@
       <div id="Do_Not_Disturb_Container" class="Control_Centre_Divisions">
         <div id="Do_Not_Disturb_Circle" class="Circle_Control_Center_Toggles">
           <svg id="Control_Center_Do_Not_Disturb_Icon" viewBox="0 0 76 76" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd" clip-rule="evenodd" d="M56.4054 42.1119C55.8717 42.3943 55.3151 42.6475 54.7369 42.8689C47.0003 45.831 38.3272 41.9605 35.3652 34.2239C33.6562 29.7602 34.2216 24.9849 36.4916 21.1745C35.6143 21.3581 34.7401 21.6137 33.8762 21.9445C25.108 25.3015 20.7214 35.1309 24.0784 43.8991C27.4355 52.6673 37.2649 57.0539 46.0331 53.6968C51.3562 51.6588 55.0644 47.2352 56.4054 42.1119Z" fill="black" fill-opacity="0.4"/>
+          <path id="Moon_Symbol" fill-rule="evenodd" clip-rule="evenodd" d="M56.4054 42.1119C55.8717 42.3943 55.3151 42.6475 54.7369 42.8689C47.0003 45.831 38.3272 41.9605 35.3652 34.2239C33.6562 29.7602 34.2216 24.9849 36.4916 21.1745C35.6143 21.3581 34.7401 21.6137 33.8762 21.9445C25.108 25.3015 20.7214 35.1309 24.0784 43.8991C27.4355 52.6673 37.2649 57.0539 46.0331 53.6968C51.3562 51.6588 55.0644 47.2352 56.4054 42.1119Z" fill="black" fill-opacity="0.4"/>
           </svg>        
         </div>        
           <div class="Main_Toggle_Heading">
             <div class="Main_Toggle_Subheadings">Do Not<br>Disturb</div>
-          </div>
+          </div> 
       </div>
       
       <div id="Keyboard_Brightness_Container" class="Control_Centre_Divisions">
