--- a/Pages/Code.html
+++ b/Pages/Code.html
@@ -50,25 +50,25 @@
 <!-- *********************************************************************** -->
   <div id="Dock">
     <!-- Toy -->
-    <div id="Toybox_Icon" class="App_Icons"></div>
+    <div id="Toybox_Icon" class="App_Icons" data-index=0></div>
     <!-- Projects -->
-    <div id="Personal_Projects_Icon" class="App_Icons"></div>
+    <div id="Messages_Icon" class="App_Icons" data-index=1></div>
     <!-- Education -->
-    <div id="Academic_Projects_Icon" class="App_Icons"></div>
+    <div id="Academic_Projects_Icon" class="App_Icons" data-index=2></div>
     <!-- Experience -->
-    <div id="Skills_Icon" class="App_Icons"></div>
+    <div id="Skills_Icon" class="App_Icons" data-index=3></div>
     <!-- Skills -->
-    <div id="Education_Icon" class="App_Icons"></div>
+    <div id="Education_Icon" class="App_Icons" data-index=4></div>
     <!-- Courses -->
-    <div id="Courses_Icon" class="App_Icons"></div>
+    <div id="Courses_Icon" class="App_Icons" data-index=5></div>
     <!-- Certifications -->
-    <div id="Certifications_Icon" class="App_Icons"></div>
+    <div id="Certifications_Icon" class="App_Icons" data-index=6></div>
     <!-- Volunteer Work -->
-    <div id="Volunteer_Work_Icon" class="App_Icons"></div>
+    <div id="Volunteer_Work_Icon" class="App_Icons" data-index=7></div>
     <!-- Awards -->
-    <div id="Awards_Icon" class="App_Icons"></div>
+    <div id="Mail_Icon" class="App_Icons" data-index=8></div>
     <!-- Links -->
-    <div id="Links_Icon" class="App_Icons"></div>
+    <div id="Links_Icon" class="App_Icons" data-index=9></div>
     <!-- Hovering Label -->
     <div id="Icon_Label">Education</div>
   </div>
@@ -258,7 +258,7 @@
       <div id="Music_Player_Container" class="Control_Centre_Divisions">
         <div id="Album_Art"></div>
         <div class="Main_Toggle_Heading">
-          <div class="Main_Toggle_Subheadings">The Transformers<br><span>Robots in Disguise</span></div>
+          <div id="Song_Title" class="Main_Toggle_Subheadings">The Transformers<br><span>Robots in Disguise</span></div>
         </div>
       <div id="Play_Button"></div>
       <div id="Fast_Forward_Button"></div>
