Updated All Dock Icons

--- a/Pages/Code.html
+++ b/Pages/Code.html
@@ -21,6 +21,7 @@
     <script src="./Code_JavaScript/Slider.js" type="text/javascript"></script>
     <script src="./Code_JavaScript/Network_Card.js" type="text/javascript"></script>
     <script src="./Code_JavaScript/Control_Center.js" type="text/javascript"></script>
+    <script src="./Code_JavaScript/Open_Application.js" type="text/javascript"></script>
 
     <meta name="viewport" 
           content="width=device-width, initial-scale=0.5, maximum-scale=1 user-scalable=0">
@@ -290,9 +291,16 @@
       <div id="Weather_Widget" class="Widget_Blocks"></div>
       <div id="Clock_Widget" class="Widget_Blocks"></div>
       <div id="Notes_Widget" class="Widget_Blocks"></div>
-
-    
     </div>
+
+    <div class="Widgets_Glass_Background"></div>
+
+
+
+
+
+
+
 
 <!-- <path fill-rule="evenodd" clip-rule="evenodd" d="M50 0C22.3858 0 0 22.3858 0 50V142C0 169.614 22.3858 192 50 192H208.652C212.224 192 215.526 193.906 217.312 197L254.84 262C258.689 268.667 268.311 268.667 272.16 262L309.688 197C311.474 193.906 314.776 192 318.348 192H478C505.614 192 528 169.614 528 142V50C528 22.3858 505.614 0 478 0H50Z" fill="#C4C4C4"/> -->
 
