--- a/Pages/Code.html
+++ b/Pages/Code.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./Code_Stylesheets/Battery_Card.css">
     <link rel="stylesheet" href="./Code_Stylesheets/Control_Center_Card.css">
     <link rel="stylesheet" href="./Code_Stylesheets/Widgets_Card.css">
+    <link rel="stylesheet" href="./Code_Stylesheets/Flowing_Covers.css">
 
     <script src="./Code_JavaScript/Code.js" type="text/javascript"></script>
     <script src="./Code_JavaScript/Dock.js" type="text/javascript"></script>
@@ -22,6 +23,8 @@
     <script src="./Code_JavaScript/Network_Card.js" type="text/javascript"></script>
     <script src="./Code_JavaScript/Control_Center.js" type="text/javascript"></script>
     <script src="./Code_JavaScript/Open_Application.js" type="text/javascript"></script>
+    <script src="./Code_JavaScript/Album_Flow.js" type="text/javascript"></script>
+
 
     <meta name="viewport" 
           content="width=device-width, initial-scale=0.5, maximum-scale=1 user-scalable=0">
@@ -257,9 +260,17 @@
       </div>
       
       <div id="Music_Player_Container" class="Control_Centre_Divisions">
-        <div id="Album_Art"></div>
+        <div id="Album_Art">
+          <div id="Album_0" class="Album_Covers"></div>
+          <div id="Album_1" class="Album_Covers"></div>
+          <div id="Album_2" class="Album_Covers"></div>
+          <div id="Album_3" class="Album_Covers"></div>
+          <div id="Album_4" class="Album_Covers"></div>
+          <div id="Album_5" class="Album_Covers"></div>
+
+        </div>
         <div class="Main_Toggle_Heading">
-          <div id="Song_Title" class="Main_Toggle_Subheadings">The Transformers<br><span>Robots in Disguise</span></div>
+          <div id="Song_Title" class="Main_Toggle_Subheadings">Pac-Man<br><span>Eat em All</span></span></div>
         </div>
       <div id="Play_Button"></div>
       <div id="Fast_Forward_Button"></div>
@@ -286,10 +297,10 @@
 <!-- WIDGETS PANEL -->
 <!-- *********************************************************************** -->
     <div class="Widgets_Card Cards">
-      <div id="Activity_Bands_Widget" class="Widget_Blocks"></div>
+      <div id="Spectrum_Analyzer_Widget" class="Widget_Blocks"></div>
       <div id="Battery_Status_Widget" class="Widget_Blocks"></div>
-      <div id="Weather_Widget" class="Widget_Blocks"></div>
       <div id="Clock_Widget" class="Widget_Blocks"></div>
+      <div id="Weather_Widget" class="Widget_Blocks"></div>
       <div id="Notes_Widget" class="Widget_Blocks"></div>
     </div>
 
