--- a/Pages/Code.html
+++ b/Pages/Code.html
@@ -469,12 +469,12 @@
       
       
       <div class="Seperators"><div></div></div>    
-      <div class="Time_Headers">4PM</div>
-      <div class="Time_Headers">5PM</div>
-      <div class="Time_Headers">6PM</div>
-      <div class="Time_Headers">7PM</div>
-      <div class="Time_Headers">8PM</div>
-      <div class="Time_Headers">8:27</div>
+      <div class="Time_Headers">12AM</div>
+      <div class="Time_Headers">1AM</div>
+      <div class="Time_Headers">2AM</div>
+      <div class="Time_Headers">3AM</div>
+      <div class="Time_Headers">4AM</div>
+      <div class="Time_Headers">5AM</div>
 
       <div class="Hourly_Weather_Icons"></div>
       <div class="Hourly_Weather_Icons"></div>
@@ -511,19 +511,29 @@
       <div class="Todays_Low" style="grid-row: 12 / span 1;">17˚C</div>
 
       <div class="Air_Quality_Index_Bars" style="grid-row: 8 / span 1;">
-        <div id="Air_Quality_Bar_1"></div>
+        <div class="Air_Quality_Bar_Containers">
+            <div id="Air_Quality_Bar_1"></div>
+        </div>
       </div>
       <div class="Air_Quality_Index_Bars" style="grid-row: 9 / span 1;">
-        <div id="Air_Quality_Bar_2"></div>
+        <div class="Air_Quality_Bar_Containers">
+            <div id="Air_Quality_Bar_2"></div>
+        </div>
       </div>
       <div class="Air_Quality_Index_Bars" style="grid-row: 10 / span 1;">
-        <div id="Air_Quality_Bar_3"></div>
+        <div class="Air_Quality_Bar_Containers">
+            <div id="Air_Quality_Bar_3"></div>
+        </div>
       </div>
       <div class="Air_Quality_Index_Bars" style="grid-row: 11 / span 1;">
-        <div id="Air_Quality_Bar_4"></div>
+        <div class="Air_Quality_Bar_Containers">
+            <div id="Air_Quality_Bar_4"></div>
+        </div>
       </div>
       <div class="Air_Quality_Index_Bars" style="grid-row: 12 / span 1;">
-        <div id="Air_Quality_Bar_5"></div>
+        <div class="Air_Quality_Bar_Containers">
+            <div id="Air_Quality_Bar_5"></div>
+        </div>
       </div>
 
 
