Fixed Widgets Panel Blur Background

--- a/Pages/Code.html
+++ b/Pages/Code.html
@@ -549,8 +549,9 @@
 
     </div>
 
-    <div class="Widgets_Glass_Background"></div>
+    <!-- <div class="Widgets_Glass_Background" style="display:none;"></div> -->
 
+    <div class="Widgets_Glass_Background"></div>
 
 
 
