Updated Widget Animations

--- a/Pages/Code.html
+++ b/Pages/Code.html
@@ -404,7 +404,7 @@
       </div>
       <div id="Notes_Widget" class="Widget_Blocks">
         <div id="Notes_Header">
-          <div id="Notes_Folder_Symbol"></div>
+          <div id="Notes_Folder_Symbol" class="Notes_Folder_Symbol"></div>
           <div id="Notes_Title">
           <label>Notes</label>
           </div>
