--- a/Pages/Code.html
+++ b/Pages/Code.html
@@ -19,8 +19,7 @@
     <link rel="stylesheet" href="./Code_Stylesheets/Spectrum_Analyzer_Widget.css">
     <link rel="stylesheet" href="./Code_Stylesheets/Activity_Rings_Widget.css">
     <link rel="stylesheet" href="./Code_Stylesheets/Weather_Widget.css">
-
-
+    <link rel="stylesheet" href="./Code_Stylesheets/Animations.css">
 
     <script src="./Code_JavaScript/Code.js" type="text/javascript"></script>
     <script src="./Code_JavaScript/Dock.js" type="text/javascript"></script>
@@ -31,7 +30,6 @@
     <script src="./Code_JavaScript/Open_Application.js" type="text/javascript"></script>
     <script src="./Code_JavaScript/Album_Flow.js" type="text/javascript"></script>
     <script src="./Code_JavaScript/Spectrum_Analyzer.js" type="text/javascript"></script>
-
 
     <meta name="viewport"
           content="width=device-width, initial-scale=0.5, maximum-scale=1 user-scalable=0">
@@ -380,7 +378,7 @@
                 </div>
                 <label id="Power_Label" class="Control_Knob_Labels">Power</label>
                 <div id="Gain_Knob" class="Control_Knobs">
-                  <div class="Knob_Nubs"></div>
+                  <div class="Knob_Nubs">x1</div>
                 </div>
                 <label id="Gain_Label" class="Control_Knob_Labels">Gain</label>
 
@@ -512,27 +510,27 @@
 
       <div class="Air_Quality_Index_Bars" style="grid-row: 8 / span 1;">
         <div class="Air_Quality_Bar_Containers">
-            <div id="Air_Quality_Bar_1"></div>
+            <div id="Air_Quality_Bar_1" class="Air_Quality_Bars"></div>
         </div>
       </div>
       <div class="Air_Quality_Index_Bars" style="grid-row: 9 / span 1;">
         <div class="Air_Quality_Bar_Containers">
-            <div id="Air_Quality_Bar_2"></div>
+            <div id="Air_Quality_Bar_2" class="Air_Quality_Bars"></div>
         </div>
       </div>
       <div class="Air_Quality_Index_Bars" style="grid-row: 10 / span 1;">
         <div class="Air_Quality_Bar_Containers">
-            <div id="Air_Quality_Bar_3"></div>
+            <div id="Air_Quality_Bar_3" class="Air_Quality_Bars"></div>
         </div>
       </div>
       <div class="Air_Quality_Index_Bars" style="grid-row: 11 / span 1;">
         <div class="Air_Quality_Bar_Containers">
-            <div id="Air_Quality_Bar_4"></div>
+            <div id="Air_Quality_Bar_4" class="Air_Quality_Bars"></div>
         </div>
       </div>
       <div class="Air_Quality_Index_Bars" style="grid-row: 12 / span 1;">
         <div class="Air_Quality_Bar_Containers">
-            <div id="Air_Quality_Bar_5"></div>
+            <div id="Air_Quality_Bar_5" class="Air_Quality_Bars"></div>
         </div>
       </div>
 
