Update Music Visualizer

--- a/Pages/Code.html
+++ b/Pages/Code.html
@@ -306,7 +306,7 @@
         <div id="Spectrum_Analyzer_Inset">
 
           <div id="Spectrum_Bars_Container">
-            <div class="Bar_Containers">
+            <div id="Column_1_Spectral_Bars" class="Bar_Containers">
                 <div class="LED_Bars Bars_7"></div>
                 <div class="LED_Bars Bars_6"></div>
                 <div class="LED_Bars Bars_5"></div>
@@ -314,9 +314,8 @@
                 <div class="LED_Bars Bars_3"></div>
                 <div class="LED_Bars Bars_2"></div>
                 <div class="LED_Bars Bars_1"></div>
-
             </div>
-            <div class="Bar_Containers">
+            <div id="Column_2_Spectral_Bars" class="Bar_Containers">
                 <div class="LED_Bars Bars_7"></div>
                 <div class="LED_Bars Bars_6"></div>
                 <div class="LED_Bars Bars_5"></div>
@@ -324,9 +323,8 @@
                 <div class="LED_Bars Bars_3"></div>
                 <div class="LED_Bars Bars_2"></div>
                 <div class="LED_Bars Bars_1"></div>
-
             </div>
-            <div class="Bar_Containers">
+            <div id="Column_3_Spectral_Bars" class="Bar_Containers">
                 <div class="LED_Bars Bars_7"></div>
                 <div class="LED_Bars Bars_6"></div>
                 <div class="LED_Bars Bars_5"></div>
@@ -334,9 +332,8 @@
                 <div class="LED_Bars Bars_3"></div>
                 <div class="LED_Bars Bars_2"></div>
                 <div class="LED_Bars Bars_1"></div>
-
             </div>
-            <div class="Bar_Containers">
+            <div id="Column_4_Spectral_Bars" class="Bar_Containers">
                 <div class="LED_Bars Bars_7"></div>
                 <div class="LED_Bars Bars_6"></div>
                 <div class="LED_Bars Bars_5"></div>
@@ -344,9 +341,8 @@
                 <div class="LED_Bars Bars_3"></div>
                 <div class="LED_Bars Bars_2"></div>
                 <div class="LED_Bars Bars_1"></div>
-
             </div>
-            <div class="Bar_Containers">
+            <div id="Column_5_Spectral_Bars" class="Bar_Containers">
                 <div class="LED_Bars Bars_7"></div>
                 <div class="LED_Bars Bars_6"></div>
                 <div class="LED_Bars Bars_5"></div>
@@ -354,9 +350,8 @@
                 <div class="LED_Bars Bars_3"></div>
                 <div class="LED_Bars Bars_2"></div>
                 <div class="LED_Bars Bars_1"></div>
-
             </div>
-            <div class="Bar_Containers">
+            <div id="Column_6_Spectral_Bars" class="Bar_Containers">
                 <div class="LED_Bars Bars_7"></div>
                 <div class="LED_Bars Bars_6"></div>
                 <div class="LED_Bars Bars_5"></div>
@@ -364,8 +359,8 @@
                 <div class="LED_Bars Bars_3"></div>
                 <div class="LED_Bars Bars_2"></div>
                 <div class="LED_Bars Bars_1"></div>
-
             </div>
+            
             <div id="Controls_Container">
                 <div id="Red_LED" class="Power_LEDs">
                   <div class="LED_Knubs"></div>
@@ -374,15 +369,13 @@
                   <div class="LED_Knubs"></div>
                 </div>
                 <div id="Power_Knob" class="Control_Knobs">
-                  <div class="Knob_Nubs"></div>
+                  <div id="Power_Nub" class="Knob_Nubs"></div>
                 </div>
                 <label id="Power_Label" class="Control_Knob_Labels">Power</label>
                 <div id="Gain_Knob" class="Control_Knobs">
                   <div class="Knob_Nubs">x1</div>
                 </div>
                 <label id="Gain_Label" class="Control_Knob_Labels">Gain</label>
-
-
             </div>
 
 
@@ -391,7 +384,7 @@
             <div class="Frequency_Labels">1KHz</div>
             <div class="Frequency_Labels">5KHz</div>
             <div class="Frequency_Labels">12KHz</div>
-            <div class="Frequency_Labels">22Khz</div>
+            <div class="Frequency_Labels">22KHz</div>
             <div class="Frequency_Labels">Controls</div>
 
           </div>
