--- a/Pages/Code.html
+++ b/Pages/Code.html
@@ -20,7 +20,12 @@
     <link rel="stylesheet" href="./Code_Stylesheets/Activity_Rings_Widget.css">
     <link rel="stylesheet" href="./Code_Stylesheets/Weather_Widget.css">
     <link rel="stylesheet" href="./Code_Stylesheets/Animations.css">
-
+    
+    <!--Linking scripts-->
+    <!--Adding P5.js libraries/modules-->
+    <script src = "./p5/p5.js"></script>
+    <script src = "./p5/addons/p5.sound.js"></script>    
+    <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
     <script src="./Code_JavaScript/Code.js" type="text/javascript"></script>
     <script src="./Code_JavaScript/Dock.js" type="text/javascript"></script>
     <script src="./Code_JavaScript/Display_Cards.js" type="text/javascript"></script>
@@ -29,7 +34,7 @@
     <script src="./Code_JavaScript/Control_Center.js" type="text/javascript"></script>
     <script src="./Code_JavaScript/Open_Application.js" type="text/javascript"></script>
     <script src="./Code_JavaScript/Album_Flow.js" type="text/javascript"></script>
-    <script src="./Code_JavaScript/Spectrum_Analyzer.js" type="text/javascript"></script>
+    <script src="./Code_JavaScript/Spectrum_Analyzer.js" defer></script>
 
     <meta name="viewport"
           content="width=device-width, initial-scale=0.5, maximum-scale=1 user-scalable=0">
@@ -373,18 +378,19 @@
                 </div>
                 <label id="Power_Label" class="Control_Knob_Labels">Power</label>
                 <div id="Gain_Knob" class="Control_Knobs">
-                  <div class="Knob_Nubs">x1</div>
+                  <div id="Multiplier_Knob" class="Knob_Nubs">x1</div>
                 </div>
                 <label id="Gain_Label" class="Control_Knob_Labels">Gain</label>
             </div>
 
 
-            <div class="Frequency_Labels">60Hz</div>
+            <!-- <div class="Frequency_Labels">60Hz</div>
             <div class="Frequency_Labels">120Hz</div>
             <div class="Frequency_Labels">1KHz</div>
             <div class="Frequency_Labels">5KHz</div>
             <div class="Frequency_Labels">12KHz</div>
-            <div class="Frequency_Labels">22KHz</div>
+            <div class="Frequency_Labels">22KHz</div> -->
+            <div id="Music_Visualizer_Label">7-Band Spectrum Analyzer / Music Visualizer</div>
             <div class="Frequency_Labels">Controls</div>
 
           </div>
