--- a/Pages/Code.html
+++ b/Pages/Code.html
@@ -125,6 +125,13 @@
       <div class="Detail_Buttons">System Report...</div>
       <div class="Detail_Buttons">Software Update...</div>
       <div class="About_Details"></div>
+      
+      
+      <div id="Window_Controls">
+        <div id="Close_About_Window_Button" class="Window_Control_Buttons">✕</div>
+        <div id="Minimize_About_Window_Button" class="Window_Control_Buttons">－</div>
+        <div id="Maximize_About_Window_Button" class="Window_Control_Buttons"></div>
+      </div>
     </div>
 
 <!-- *********************************************************************** -->
