--- a/designmycompass.html
+++ b/designmycompass.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Design My Compass ♡</title>
+    <meta name="description" content=""/>
     <link rel="stylesheet" href="./Stylesheets_Design_My_Compass/Window.css">
     <link rel="stylesheet" href="./Stylesheets_Design_My_Compass/Gig_Tiles.css">
     <link rel="stylesheet" href="./Stylesheets_Design_My_Compass/Navigation_Bar.css">
@@ -16,7 +17,14 @@
       <div id="Menu_Expandable_Tray" class="Menu_Expandable_Tray"></div>       
       <div id="Menu_Button" class="Menu_Button">
         <div id="Circle_Mask" class="Circle_Mask"></div>  
-        <div id="Menu_Frame"></div>
+        <div id="Menu_Frame">
+          <div class="Menu_Links">About & Contact</div>
+          <div class="Menu_Links">Fiverr</div>
+          <div class="Menu_Links">Design</div>
+          <div class="Menu_Links">Icon Converter</div>
+          <div class="Menu_Links">GitHub</div>
+          <div class="Menu_Links">Portfolio</div>
+        </div>
       </div>
     </div>
     <div id="Shader"></div>
