--- a/designmycompass.html
+++ b/designmycompass.html
@@ -27,7 +27,7 @@
         </div>
       </div>
     </div>
-    <div id="Shader"></div>
+    <!-- <div id="Shader"></div> -->
 
     <div id="Main_Title">Design My<br>Compass {}</div>
 
