--- a/designmycompass.html
+++ b/designmycompass.html
@@ -17,7 +17,7 @@
 
     
     <div id="Navigation_Bar">
-      <div id="Menu_Expandable_Tray" class="Menu_Expandable_Tray"></div>       
+      <div id="Menu_Expandable_Tray" class="Menu_Expandable_Tray"></div>     
       <div id="Menu_Button" class="Menu_Button">
         <div id="Circle_Mask" class="Circle_Mask"></div>  
         <div id="Menu_Frame">
@@ -27,12 +27,18 @@
           <div class="Menu_Links">Icon Converter</div>
           <div class="Menu_Links">GitHub</div>
           <div class="Menu_Links">Portfolio</div>
+          <div class="Hover_Highlight"></div>
         </div>
       </div>
     </div>
     <!-- <div id="Shader"></div> -->
 
-    <div id="Main_Title">Design My<br>Compass {}</div>
+    <div id="Main_Title"><span>
+      Design My <br> Compass {}
+    </span>
+      <!-- <div id="Title_Line_1">Design My</div> -->
+      <!-- <div id="Title_Line_2">Compass {}</div>     -->
+    </div>
 
     
     <div id="Container">
