Updated Dynamic Menu

--- a/designmycompass.html
+++ b/designmycompass.html
@@ -21,13 +21,13 @@
       <div id="Menu_Button" class="Menu_Button">
         <div id="Circle_Mask" class="Circle_Mask"></div>  
         <div id="Menu_Frame">
-          <div class="Menu_Links">About & Contact</div>
-          <div class="Menu_Links">Fiverr</div>
-          <div class="Menu_Links">Design</div>
-          <div class="Menu_Links">Icon Converter</div>
-          <div class="Menu_Links">GitHub</div>
-          <div class="Menu_Links">Portfolio</div>
-          <div class="Hover_Highlight"></div>
+          <div class="Menu_Links" data-index="0">About &<br>Contact</div>
+          <div class="Menu_Links" data-index="1">Fiverr</div>
+          <div class="Menu_Links" data-index="2">Design</div>
+          <div class="Menu_Links" data-index="3">Icon<br>Converter</div>
+          <div class="Menu_Links" data-index="4">GitHub</div>
+          <div class="Menu_Links" data-index="5">Portfolio</div>
+          <div id="Hover_Highlight"></div>
         </div>
       </div>
     </div>
