Example Sections Added

--- a/designmycompass.html
+++ b/designmycompass.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./Stylesheets_Design_My_Compass/Gig_Tiles.css">
     <link rel="stylesheet" href="./Stylesheets_Design_My_Compass/Navigation_Bar.css">
     <link rel="stylesheet" href="./Stylesheets_Design_My_Compass/Responsiveness.css">
+    <link rel="stylesheet" href="./Stylesheets_Design_My_Compass/Example_Sections.css">
     <script type="text/javascript" src="./JavaScript_Design_My_Compass/Window.js"></script>
     <script type="text/javascript" src="./JavaScript_Design_My_Compass/Menu.js"></script>
     <script type="text/javascript" src="./JavaScript_Design_My_Compass/Page_Navigator.js"></script>
@@ -23,7 +24,7 @@
         <div id="Menu_Frame">
           <div class="Menu_Links" data-index="0">About &<br>Contact</div>
           <div class="Menu_Links" data-index="1">Fiverr</div>
-          <div class="Menu_Links" data-index="2">Design</div>
+          <div class="Menu_Links" data-index="2">Instagram</div>
           <div class="Menu_Links" data-index="3">Icon<br>Converter</div>
           <div class="Menu_Links" data-index="4">GitHub</div>
           <div class="Menu_Links" data-index="5">Portfolio</div>
@@ -31,7 +32,7 @@
         </div>
       </div>
     </div>
-    <!-- <div id="Shader"></div> -->
+    <div id="Shader"></div>
 
     <div id="Main_Title"><span>
       Design My <br> Compass {}
@@ -47,7 +48,7 @@
         <div class="Gig_Descriptions">Logo & Icon Design</div>
         <div class="Gig_Previews"></div>
         <div class="Button_Containers">
-          <button id="Examples_0" class="Button_Links" type="button" data-link="Placeholder">Examples</button>
+          <button id="Examples_0" class="Button_Links Example_Buttons" type="button" data-link="Placeholder">Examples</button>
           <button id="Gig_0" class="Button_Links Gig_Buttons" type="button" data-link="Placeholder">Fiverr Gig</button>
         </div>
       </div>
@@ -58,7 +59,7 @@
         <div class="Gig_Descriptions">Desktop App Development</div>
         <div class="Gig_Previews"></div>
         <div class="Button_Containers">
-          <button id="Examples_1" class="Button_Links" type="button" data-link="Placeholder">Examples</button>
+          <button id="Examples_1" class="Button_Links Example_Buttons" type="button" data-link="Placeholder">Examples</button>
           <button id="Gig_1" class="Button_Links Gig_Buttons" type="button" data-link="Placeholder">Fiverr Gig</button>
         </div>
       </div>
@@ -69,11 +70,28 @@
         <div class="Gig_Descriptions">Portfolio Websites</div>
         <div class="Gig_Previews"></div>
         <div class="Button_Containers">
-          <button id="Examples_2" class="Button_Links" type="button" data-link="Placeholder">Examples</button>
+          <button id="Examples_2" class="Button_Links Example_Buttons" type="button" data-link="Placeholder">Examples</button>
           <button id="Gig_2" class="Button_Links Gig_Buttons" type="button" data-link="Placeholder">Fiverr Gig</button>
         </div>  
       </div>
     </div>
   </div>
+  
+  
+  <div id="Example_Container_1" class="Example_Containers">
+    <div id="Logo_And_Icon_Design_Hero_Image"></div>
+  </div>
+  <div id="Example_Container_2" class="Example_Containers">
+    <div id="Desktop_App_Development_Hero_Image"></div>
+  </div>
+  <div id="Example_Container_3" class="Example_Containers">
+    <div id="Portfolio_Websites_Hero_Image"></div>
+  </div>
+
+  
+  
+  
+  
+  
   </body>
 </html>
