Background for rubber banding

--- a/designmycompass.html
+++ b/designmycompass.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="./JavaScript_Design_My_Compass/Page_Navigator.js"></script>
   </head>
   <body>
+    <div id="Stagnant_Panel"></div>
     <div id="Background_Body"> </div>
 
     
