Moved rubber banding background

--- a/designmycompass.html
+++ b/designmycompass.html
@@ -80,6 +80,12 @@
   
   
   <div id="Example_Container_1" class="Example_Containers">
+    <div class="Flying_Icons">1</div>
+    <div class="Flying_Icons">2</div>
+    <div class="Flying_Icons">3</div>
+    <div class="Flying_Icons">4</div>
+    <div class="Flying_Icons">5</div>
+    <div class="Flying_Icons">6</div>
     <div id="Logo_And_Icon_Design_Hero_Image"></div>
   </div>
   <div id="Example_Container_2" class="Example_Containers">
