--- a/designmycompass.html
+++ b/designmycompass.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./Stylesheets_Design_My_Compass/Navigation_Bar.css">
     <link rel="stylesheet" href="./Stylesheets_Design_My_Compass/Responsiveness.css">
     <link rel="stylesheet" href="./Stylesheets_Design_My_Compass/Example_Sections.css">
+    <link rel="stylesheet" href="./Stylesheets_Design_My_Compass/About_Panel.css">
     <script type="text/javascript" src="./JavaScript_Design_My_Compass/Window.js"></script>
     <script type="text/javascript" src="./JavaScript_Design_My_Compass/Menu.js"></script>
     <script type="text/javascript" src="./JavaScript_Design_My_Compass/Page_Navigator.js"></script>
@@ -17,13 +18,12 @@
     <div id="Stagnant_Panel"></div>
     <div id="Background_Body"> </div>
 
-    
     <div id="Navigation_Bar">
       <div id="Menu_Expandable_Tray" class="Menu_Expandable_Tray"></div>     
       <div id="Menu_Button" class="Menu_Button">
         <div id="Circle_Mask" class="Circle_Mask"></div>  
         <div id="Menu_Frame">
-          <div class="Menu_Links" data-index="0">About &<br>Contact</div>
+          <div id="Icon_Button" class="Menu_Links" data-index="0"></div>
           <div class="Menu_Links" data-index="1">Fiverr</div>
           <div class="Menu_Links" data-index="2">Instagram</div>
           <div class="Menu_Links" data-index="3">Icon<br>Converter</div>
@@ -108,21 +108,9 @@
       <div id="iphone_Container"></div>
       <div id="Vertical_Shader_iphone"></div>    
       <iframe id="iphone_iframe" src="https://www.drawingmycompass.com" title="Portfolio_Iframe"></iframe>
-
-
-
-
     </div>
   </div>
 
-  
-  
-  
-  
-  
-  
-  
-  
   </body>
 </html>
 
