--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div id="Profile_Image"></div>
   </div>
   <div class="Containers">
-    <div id="Username_Handle">@drawingmycompass</div>
+    <div id="Username_Handle">@sketching.with.stardust</div>
   </div>
   <div class="Containers">
     <div id="Bio">
