--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <!-- <meta name="viewport" content="width=device-width, user-scalable=no"/> -->
-    <title>Drawing My Compass ♡</title>
+    <title>Sketching With Stardust ♡</title>
     <script type="text/javascript" src="./JavaScript/Main.js"></script>
     <link rel="stylesheet" href="./Stylesheets/Window.css">
     <link rel="stylesheet" href="./Stylesheets/Card.css">
